strings: Explicit indexing for 'import_partial_success'
When translate it to Japanese, values are exchanged.
For example, '1 of 10' is '10 個中の 1'.

So this string should be explicit indexed.

Signed-off-by: Eiji Tanioka <tanioka404@gmail.com>
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
         <item quantity="other">%d tunnels selected</item>
     </plurals>
     <plurals name="import_partial_success">
-        <item quantity="one">Imported %d of %d tunnels</item>
-        <item quantity="other">Imported %d of %d tunnels</item>
+        <item quantity="one">Imported %1$d of %2$d tunnels</item>
+        <item quantity="other">Imported %1$d of %2$d tunnels</item>
     </plurals>
     <plurals name="import_total_success">
         <item quantity="one">Imported %d tunnel</item>
