strings: update Russian translate
Signed-off-by: Alexey <zasranecc@bk.ru>
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/ui/src/main/res/values-ru/strings.xml
+++ b/ui/src/main/res/values-ru/strings.xml
@@ -26,6 +26,9 @@
     </plurals>
     <string name="add_peer">Добавить пира</string>
     <string name="addresses">IP-адреса</string>
+    <string name="allow_remote_control_intents_title">Доступ к другим приложениям</string>
+    <string name="allow_remote_control_intents_summary_on">Сторонние приложения могут переключать туннели (дополнительно)</string>
+    <string name="allow_remote_control_intents_summary_off">Сторонние приложения не могут переключать туннели (рекомендуется)</string>
     <string name="allowed_ips">Разрешенные IP-адреса</string>
     <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%1$s из %2$s</string>
@@ -55,6 +58,8 @@
     <string name="create_activity_title">Создать WireGuard туннель</string>
     <string name="create_bin_dir_error">Не удалось создать локальный двоичный каталог</string>
     <string name="create_empty">Создать вручную</string>
+    <string name="create_from_file">Импорт из файла или архива</string>
+    <string name="create_from_qr_code">Сканировать из QR-кода</string>
     <string name="create_output_dir_error">Не удалось создать выходной каталог</string>
     <string name="create_downloads_file_error">Не удалось создать файл в каталоге загрузок</string>
     <string name="create_temp_dir_error">Не удалось создать временный локальный каталог</string>
@@ -103,8 +108,9 @@
     <string name="module_disabler_disabled_summary">Экспериментальный модуль ядра приоритетнее и улучшает производительность</string>
     <string name="module_disabler_enabled_title">Выключить модуль ядра</string>
     <string name="module_disabler_enabled_summary">Пользовательское пространство немного медленнее и улучшает стабильность</string>
+    <string name="success_application_will_restart">Успех. Приложение перезапустится…</string>
     <string name="mtu">MTU</string>
-    <string name="multiple_tunnels_title">Разрешить несколько одновременных туннелей</string>
+    <string name="multiple_tunnels_title">Несколько одновременных туннелей</string>
     <string name="multiple_tunnels_summary_on">Могут быть включены несколько туннелей одновременно</string>
     <string name="multiple_tunnels_summary_off">Только один туннель, выключит другие</string>
     <string name="name">Имя</string>
@@ -118,6 +124,7 @@
     <string name="parse_error_integer">число</string>
     <string name="parse_error_reason">Не могу разобрать %1$s “%2$s”</string>
     <string name="peer">Пир</string>
+    <string name="permission_description">управлять туннелями WireGuard, включая и отключая туннели по желанию, потенциально перенаправляя интернет-трафик</string>
     <string name="permission_label">управлять туннелями WireGuard</string>
     <string name="persistent_keepalive">Постоянное соединение</string>
     <string name="pre_shared_key">Общий ключ</string>
