--- a/ui/src/main/res/values-it/strings.xml
+++ b/ui/src/main/res/values-it/strings.xml
@@ -88,6 +88,7 @@
     <string name="key_length_explanation_binary">: le chiavi di WireGuard devono essere di 32 byte</string>
     <string name="key_length_explanation_hex">: le chiavi hex di WireGuard devono essere di 64 caratteri (32 byte)</string>
     <string name="listen_port">Porta in ascolto</string>
+    <string name="log_export_error">Impossibile esportare il registro: %s</string>
     <string name="log_export_success">Salvato in “%s”</string>
     <string name="log_export_title">Esporta file registro</string>
     <string name="logcat_error">Impossibile eseguire logcat: </string>
