--- a/ui/src/main/res/values-zh-rCN/strings.xml
+++ b/ui/src/main/res/values-zh-rCN/strings.xml
@@ -82,6 +82,7 @@
     <string name="key_length_explanation_binary">：WireGuard 密钥大小必须为 32 字节</string>
     <string name="key_length_explanation_hex">：WireGuard 的十六进制密钥长度必须为 64 个字符（32 字节）</string>
     <string name="listen_port">监听端口</string>
+    <string name="log_export_error">无法导出日志：%s</string>
     <string name="log_export_success">已保存至 “%s”</string>
     <string name="log_export_title">导出日志文件</string>
     <string name="logcat_error">无法运行 logcat：</string>
