--- a/ui/src/main/res/values/strings.xml
+++ b/ui/src/main/res/values/strings.xml
@@ -26,9 +26,9 @@
     </plurals>
     <string name="add_peer">Add peer</string>
     <string name="addresses">Addresses</string>
-    <string name="allow_remote_control_intents_title">Allow remote control apps</string>
-    <string name="allow_remote_control_intents_summary_on">External apps may toggle tunnels (advanced)</string>
     <string name="allow_remote_control_intents_summary_off">External apps may not toggle tunnels (recommended)</string>
+    <string name="allow_remote_control_intents_summary_on">External apps may toggle tunnels (advanced)</string>
+    <string name="allow_remote_control_intents_title">Allow remote control apps</string>
     <string name="allowed_ips">Allowed IPs</string>
     <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%1$s\'s %2$s</string>
@@ -57,18 +57,17 @@
     <string name="config_save_success">Successfully saved configuration for “%s”</string>
     <string name="create_activity_title">Create WireGuard Tunnel</string>
     <string name="create_bin_dir_error">Cannot create local binary directory</string>
+    <string name="create_downloads_file_error">Cannot create file in downloads directory</string>
     <string name="create_empty">Create from scratch</string>
     <string name="create_from_file">Import from file or archive</string>
     <string name="create_from_qr_code">Scan from QR code</string>
     <string name="create_output_dir_error">Cannot create output directory</string>
-    <string name="create_downloads_file_error">Cannot create file in downloads directory</string>
     <string name="create_temp_dir_error">Cannot create local temporary directory</string>
     <string name="create_tunnel">Create Tunnel</string>
     <string name="dark_theme_summary_off">Currently using light (day) theme</string>
     <string name="dark_theme_summary_on">Currently using dark (night) theme</string>
     <string name="dark_theme_title">Use dark theme</string>
     <string name="delete">Delete</string>
-    <string name="toggle_all">Toggle All</string>
     <string name="dns_servers">DNS servers</string>
     <string name="edit">Edit</string>
     <string name="endpoint">Endpoint</string>
@@ -89,29 +88,35 @@
     <string name="import_from_qr_code">Import Tunnel from QR Code</string>
     <string name="import_success">Imported “%s”</string>
     <string name="interface_title">Interface</string>
+    <string name="key_contents_error">Bad characters in key</string>
+    <string name="key_length_error">Incorrect key length</string>
     <string name="key_length_explanation_base64">: WireGuard base64 keys must be 44 characters (32 bytes)</string>
     <string name="key_length_explanation_binary">: WireGuard keys must be 32 bytes</string>
     <string name="key_length_explanation_hex">: WireGuard hex keys must be 64 characters (32 bytes)</string>
     <string name="listen_port">Listen port</string>
+    <string name="log_export_error">Unable to export log: %s</string>
+    <string name="log_export_subject">WireGuard Android Log File</string>
     <string name="log_export_success">Saved to “%s”</string>
     <string name="log_export_title">Export log file</string>
-    <string name="log_export_subject">WireGuard Android Log File</string>
+    <string name="log_saver_activity_label">Save log</string>
+    <string name="log_viewer_pref_summary">Logs may assist with debugging</string>
+    <string name="log_viewer_pref_title">View application log</string>
+    <string name="log_viewer_title">Log</string>
     <string name="logcat_error">Unable to run logcat: </string>
-    <string name="module_version_error">Unable to determine kernel module version</string>
-    <string name="module_installer_not_found">No modules are available for your device</string>
+    <string name="module_disabler_disabled_summary">The experimental kernel module can improve performance</string>
+    <string name="module_disabler_disabled_title">Enable kernel module backend</string>
+    <string name="module_disabler_enabled_summary">The slower userspace backend may improve stability</string>
+    <string name="module_disabler_enabled_title">Disable kernel module backend</string>
+    <string name="module_installer_error">Something went wrong. Please try again</string>
     <string name="module_installer_initial">The experimental kernel module can improve performance</string>
+    <string name="module_installer_not_found">No modules are available for your device</string>
     <string name="module_installer_title">Download and install kernel module</string>
     <string name="module_installer_working">Downloading and installing…</string>
-    <string name="module_installer_error">Something went wrong. Please try again</string>
-    <string name="module_disabler_disabled_title">Enable kernel module backend</string>
-    <string name="module_disabler_disabled_summary">The experimental kernel module can improve performance</string>
-    <string name="module_disabler_enabled_title">Disable kernel module backend</string>
-    <string name="module_disabler_enabled_summary">The slower userspace backend may improve stability</string>
-    <string name="success_application_will_restart">Success. The application will now restart…</string>
+    <string name="module_version_error">Unable to determine kernel module version</string>
     <string name="mtu">MTU</string>
-    <string name="multiple_tunnels_title">Allow multiple simultaneous tunnels</string>
-    <string name="multiple_tunnels_summary_on">Multiple tunnels may be turned on simultaneously</string>
     <string name="multiple_tunnels_summary_off">Turning on one tunnel will turn off others</string>
+    <string name="multiple_tunnels_summary_on">Multiple tunnels may be turned on simultaneously</string>
+    <string name="multiple_tunnels_title">Allow multiple simultaneous tunnels</string>
     <string name="name">Name</string>
     <string name="no_config_error">Trying to bring up a tunnel with no config</string>
     <string name="no_configs_error">No configurations found</string>
@@ -131,8 +136,8 @@
     <string name="public_key">Public key</string>
     <string name="public_key_description">Public key</string>
     <string name="qr_code_hint">Tip: generate with `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
-    <string name="restore_on_boot_summary_on">Will bring up enabled tunnels at boot</string>
     <string name="restore_on_boot_summary_off">Will not bring up enabled tunnels at boot</string>
+    <string name="restore_on_boot_summary_on">Will bring up enabled tunnels at boot</string>
     <string name="restore_on_boot_title">Restore on boot</string>
     <string name="save">Save</string>
     <string name="select_all">Select all</string>
@@ -141,6 +146,8 @@
     <string name="shell_exit_status_read_error">Shell cannot read exit status</string>
     <string name="shell_marker_count_error">Shell expected 4 markers, received %d</string>
     <string name="shell_start_error">Shell failed to start: %d</string>
+    <string name="success_application_will_restart">Success. The application will now restart…</string>
+    <string name="toggle_all">Toggle All</string>
     <string name="toggle_error">Error toggling WireGuard tunnel: %s</string>
     <string name="tools_installer_already">wg and wg-quick are already installed</string>
     <string name="tools_installer_failure">Unable to install command-line tools (no root?)</string>
@@ -153,11 +160,11 @@
     <string name="tools_installer_working">Installing wg and wg-quick</string>
     <string name="tools_unavailable_error">Required tools unavailable</string>
     <string name="transfer">Transfer</string>
-    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
     <string name="transfer_bytes">%d B</string>
+    <string name="transfer_gibibytes">%.2f GiB</string>
     <string name="transfer_kibibytes">%.2f KiB</string>
     <string name="transfer_mibibytes">%.2f MiB</string>
-    <string name="transfer_gibibytes">%.2f GiB</string>
+    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
     <string name="transfer_tibibytes">%.2f TiB</string>
     <string name="tun_create_error">Unable to create tun device</string>
     <string name="tunnel_config_error">Unable to configure tunnel (wg-quick returned %d)</string>
@@ -183,10 +190,4 @@
     <string name="zip_export_success">Saved to “%s”</string>
     <string name="zip_export_summary">Zip file will be saved to downloads folder</string>
     <string name="zip_export_title">Export tunnels to zip file</string>
-    <string name="key_length_error">Incorrect key length</string>
-    <string name="key_contents_error">Bad characters in key</string>
-    <string name="log_viewer_title">Log</string>
-    <string name="log_viewer_pref_title">View application log</string>
-    <string name="log_viewer_pref_summary">Logs may assist with debugging</string>
-    <string name="log_saver_activity_label">Save log</string>
 </resources>
