--- a/ui/src/main/res/values-zh-rCN/strings.xml
+++ b/ui/src/main/res/values-zh-rCN/strings.xml
@@ -10,7 +10,7 @@
         <item quantity="other">已选择 %d 项</item>
     </plurals>
     <plurals name="import_partial_success">
-        <item quantity="other">导入了 %d 项，读取到 %d 项</item>
+        <item quantity="other">导入了 %2$d 项中的 %1$d 项</item>
     </plurals>
     <plurals name="import_total_success">
         <item quantity="other">导入了 %d 项</item>
@@ -20,6 +20,9 @@
     </plurals>
     <string name="add_peer">添加节点</string>
     <string name="addresses">局域网 IP 地址</string>
+    <string name="allow_remote_control_intents_summary_off">外部应用当前不能控制隧道（不建议勾选）</string>
+    <string name="allow_remote_control_intents_summary_on">外部应用当前能够控制隧道（面向高级用户）</string>
+    <string name="allow_remote_control_intents_title">授权外部控制</string>
     <string name="allowed_ips">路由的 IP 地址（段）</string>
     <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%1$s 的 %2$s 字段</string>
@@ -48,16 +51,17 @@
     <string name="config_save_success">已保存 “%s” 的配置</string>
     <string name="create_activity_title">创建 WireGuard 隧道</string>
     <string name="create_bin_dir_error">无法创建本地二进制文件目录</string>
-    <string name="create_empty">手动创建</string>
-    <string name="create_output_dir_error">无法创建输出目录</string>
     <string name="create_downloads_file_error">无法在下载目录中创建文件</string>
+    <string name="create_empty">手动创建</string>
+    <string name="create_from_file">导入配置或压缩包</string>
+    <string name="create_from_qr_code">扫描二维码</string>
+    <string name="create_output_dir_error">无法创建输出目录</string>
     <string name="create_temp_dir_error">无法创建本地临时目录</string>
     <string name="create_tunnel">创建隧道</string>
     <string name="dark_theme_summary_off">正在使用亮色（白昼）主题</string>
     <string name="dark_theme_summary_on">正在使用暗色（黑夜）主题</string>
     <string name="dark_theme_title">使用暗色主题</string>
     <string name="delete">删除</string>
-    <string name="toggle_all">反选</string>
     <string name="dns_servers">DNS 服务器</string>
     <string name="edit">编辑</string>
     <string name="endpoint">对端</string>
@@ -78,39 +82,47 @@
     <string name="import_from_qr_code">从二维码导入隧道</string>
     <string name="import_success">导入了 “%s”</string>
     <string name="interface_title">接口 / Interface</string>
+    <string name="key_contents_error">密钥中含有错误字符</string>
+    <string name="key_length_error">密钥长度错误</string>
     <string name="key_length_explanation_base64">：WireGuard 的 Base64 密钥长度必须为 44 个字符（32 字节）</string>
     <string name="key_length_explanation_binary">：WireGuard 密钥大小必须为 32 字节</string>
     <string name="key_length_explanation_hex">：WireGuard 的十六进制密钥长度必须为 64 个字符（32 字节）</string>
     <string name="listen_port">监听端口</string>
     <string name="log_export_error">无法导出日志：%s</string>
+    <string name="log_export_subject">WireGuard 日志文件</string>
     <string name="log_export_success">已保存至 “%s”</string>
     <string name="log_export_title">导出日志文件</string>
-    <string name="logcat_error">无法运行 logcat：</string>
-    <string name="module_version_error">无法确定内核模块版本</string>
-    <string name="module_installer_not_found">没有可用于此设备的模块</string>
+    <string name="log_saver_activity_label">保存日志</string>
+    <string name="log_viewer_pref_summary">日志信息有助于调试</string>
+    <string name="log_viewer_pref_title">查看应用日志</string>
+    <string name="log_viewer_title">日志</string>
+    <string name="logcat_error">无法运行 logcat： </string>
+    <string name="module_disabler_disabled_summary">内核空间的模块性能较强，但可能不稳定</string>
+    <string name="module_disabler_disabled_title">启用内核模块</string>
+    <string name="module_disabler_enabled_summary">用户空间的模块性能较弱，但稳定性更好</string>
+    <string name="module_disabler_enabled_title">停用内核模块</string>
+    <string name="module_installer_error">发生错误，请重试</string>
     <string name="module_installer_initial">使用内核模块可以提升性能（实验性）</string>
+    <string name="module_installer_not_found">没有可用于此设备的模块</string>
     <string name="module_installer_title">下载并安装内核模块</string>
     <string name="module_installer_working">正在下载安装...</string>
-    <string name="module_installer_error">发生错误，请重试</string>
-    <string name="module_disabler_disabled_title">启用内核模块</string>
-    <string name="module_disabler_disabled_summary">内核空间的模块性能较强，但可能不稳定</string>
-    <string name="module_disabler_enabled_title">停用内核模块</string>
-    <string name="module_disabler_enabled_summary">用户空间的模块性能较弱，但稳定性更好</string>
+    <string name="module_version_error">无法确定内核模块版本</string>
     <string name="mtu">MTU</string>
-    <string name="multiple_tunnels_title">同时开启多条隧道</string>
-    <string name="multiple_tunnels_summary_on">当前允许同时开启多条隧道</string>
     <string name="multiple_tunnels_summary_off">当前一次只能开启一条隧道</string>
+    <string name="multiple_tunnels_summary_on">当前允许同时开启多条隧道</string>
+    <string name="multiple_tunnels_title">同时开启多条隧道</string>
     <string name="name">名称</string>
     <string name="no_config_error">尝试在无配置情况下建立连接</string>
     <string name="no_configs_error">未找到配置</string>
     <string name="no_tunnels_error">无隧道</string>
     <string name="parse_error_generic">字符串</string>
-    <string name="parse_error_inet_address">&#32;IP 地址</string>
+    <string name="parse_error_inet_address">&#x0020;IP 地址</string>
     <string name="parse_error_inet_endpoint">对端</string>
-    <string name="parse_error_inet_network">&#32;IP 网络</string>
+    <string name="parse_error_inet_network">&#x0020;IP 网络</string>
     <string name="parse_error_integer">数字</string>
-    <string name="parse_error_reason">无法解析%1$s “%2$s”&#32;</string>
+    <string name="parse_error_reason">无法解析%1$s “%2$s”&#x0020;</string>
     <string name="peer">节点 / Peer</string>
+    <string name="permission_description">自由控制 WireGuard 隧道的开启或关闭，但可能会导致流量误传</string>
     <string name="permission_label">控制 WireGuard 隧道</string>
     <string name="persistent_keepalive">连接保活间隔</string>
     <string name="pre_shared_key">预共享密钥</string>
@@ -118,8 +130,8 @@
     <string name="public_key">公钥</string>
     <string name="public_key_description">公钥</string>
     <string name="qr_code_hint">提示：使用命令 `qrencode -t ansiutf8 &lt; tunnel.conf` 生成二维码</string>
-    <string name="restore_on_boot_summary_on">设备启动时自动开启上次使用的隧道</string>
     <string name="restore_on_boot_summary_off">未启用</string>
+    <string name="restore_on_boot_summary_on">设备启动时自动开启上次使用的隧道</string>
     <string name="restore_on_boot_title">启动时恢复</string>
     <string name="save">保存</string>
     <string name="select_all">全选</string>
@@ -128,6 +140,8 @@
     <string name="shell_exit_status_read_error">Shell 无法读取退出状态</string>
     <string name="shell_marker_count_error">Shell 应获取 4 个标记，获取到 %d 个</string>
     <string name="shell_start_error">Shell 启动失败：%d</string>
+    <string name="success_application_will_restart">成功，应用即将重启...</string>
+    <string name="toggle_all">反选</string>
     <string name="toggle_error">切换隧道状态时出错：%s</string>
     <string name="tools_installer_already">wg 与 wg-quick 已安装</string>
     <string name="tools_installer_failure">无法安装命令行工具（尚未获取 root 权限？）</string>
@@ -140,11 +154,11 @@
     <string name="tools_installer_working">正在安装 wg 与 wg-quick...</string>
     <string name="tools_unavailable_error">所需工具不可用</string>
     <string name="transfer">流量</string>
-    <string name="transfer_rx_tx">接收：%1$s，发送：%2$s</string>
     <string name="transfer_bytes">%d B</string>
+    <string name="transfer_gibibytes">%.2f GiB</string>
     <string name="transfer_kibibytes">%.2f KiB</string>
     <string name="transfer_mibibytes">%.2f MiB</string>
-    <string name="transfer_gibibytes">%.2f GiB</string>
+    <string name="transfer_rx_tx">接收：%1$s，发送：%2$s</string>
     <string name="transfer_tibibytes">%.2f TiB</string>
     <string name="tun_create_error">无法创建 tun 设备</string>
     <string name="tunnel_config_error">无法配置隧道（wg-quick returned %d）</string>
@@ -170,6 +184,4 @@
     <string name="zip_export_success">已保存至 “%s”</string>
     <string name="zip_export_summary">zip 压缩包将保存至下载文件夹</string>
     <string name="zip_export_title">导出隧道配置为 zip 压缩包</string>
-    <string name="key_length_error">密钥长度错误</string>
-    <string name="key_contents_error">密钥中含有错误字符</string>
 </resources>
