--- a/ui/src/main/res/values-it/strings.xml
+++ b/ui/src/main/res/values-it/strings.xml
@@ -26,6 +26,9 @@
     </plurals>
     <string name="add_peer">Aggiungi peer</string>
     <string name="addresses">Indirizzi</string>
+    <string name="allow_remote_control_intents_summary_off">Le applicazioni esterne non possono attivare tunnel (consigliato)</string>
+    <string name="allow_remote_control_intents_summary_on">Le applicazioni esterne possono attivare tunnel (avanzato)</string>
+    <string name="allow_remote_control_intents_title">Consenti applicazioni di controllo remoto</string>
     <string name="allowed_ips">IP consentiti</string>
     <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%2$s di %1$s</string>
@@ -54,61 +57,79 @@
     <string name="config_save_success">Configurazione per “%s” salvata correttamente</string>
     <string name="create_activity_title">Crea un tunnel WireGuard</string>
     <string name="create_bin_dir_error">Impossibile creare cartella locale binari</string>
-    <string name="create_empty">Crea da zero</string>
-    <string name="create_output_dir_error">Impossibile creare la cartella di output</string>
     <string name="create_downloads_file_error">Impossibile creare il file nella cartella di download</string>
+    <string name="create_empty">Crea da zero</string>
+    <string name="create_from_file">Importa da file o archivio</string>
+    <string name="create_from_qr_code">Scansione da codice QR</string>
+    <string name="create_output_dir_error">Impossibile creare la cartella di output</string>
     <string name="create_temp_dir_error">Impossibile creare la cartella locale temporanea</string>
     <string name="create_tunnel">Crea tunnel</string>
     <string name="dark_theme_summary_off">Stai usando il tema chiaro (giorno)</string>
     <string name="dark_theme_summary_on">Stai usando il tema scuro (notte)</string>
     <string name="dark_theme_title">Usa tema scuro</string>
     <string name="delete">Elimina</string>
-    <string name="toggle_all">Inverti tutto</string>
     <string name="dns_servers">Server DNS</string>
     <string name="edit">Modifica</string>
     <string name="endpoint">Endpoint</string>
     <string name="error_down">Errore di disattivazione del tunnel: %s</string>
     <string name="error_fetching_apps">Errore di recupero della lista app: %s</string>
-    <string name="error_root">Si prega di ottenere l\'accesso root e riprovare</string>
+    <string name="error_root">Accedi come root e riprova</string>
     <string name="error_up">Errore di attivazione del tunnel: %s</string>
     <string name="exclude_private_ips">Escludi IP privati</string>
     <string name="excluded_applications">Applicazioni escluse</string>
+    <string name="generate_new_private_key">Genera nuova chiave privata</string>
     <string name="generic_error">Errore “%s” sconosciuto</string>
     <string name="hint_automatic">(auto)</string>
     <string name="hint_generated">(generato)</string>
     <string name="hint_optional">(facoltativo)</string>
+    <string name="hint_optional_discouraged">(facoltativo, non consigliato)</string>
     <string name="hint_random">(casuale)</string>
     <string name="illegal_filename_error">Nome file “%s” non valido</string>
     <string name="import_error">Impossibile importare il tunnel: %s</string>
     <string name="import_from_qr_code">Importa tunnel da codice QR</string>
     <string name="import_success">Importato “%s”</string>
     <string name="interface_title">Interfaccia</string>
+    <string name="key_contents_error">Caratteri non validi nella chiave</string>
+    <string name="key_length_error">Lunghezza non valida della chiave</string>
     <string name="key_length_explanation_base64">: le chiavi base64 di WireGuard devono essere di 44 caratteri (32 byte)</string>
     <string name="key_length_explanation_binary">: le chiavi di WireGuard devono essere di 32 byte</string>
     <string name="key_length_explanation_hex">: le chiavi hex di WireGuard devono essere di 64 caratteri (32 byte)</string>
     <string name="listen_port">Porta in ascolto</string>
     <string name="log_export_error">Impossibile esportare il registro: %s</string>
+    <string name="log_export_subject">File di log di WireGuard Android</string>
     <string name="log_export_success">Salvato in “%s”</string>
     <string name="log_export_title">Esporta file registro</string>
+    <string name="log_saver_activity_label">Salva il log</string>
+    <string name="log_viewer_pref_summary">I log possono aiutare in fase di debug</string>
+    <string name="log_viewer_pref_title">Visualizza log dell\'applicazione</string>
+    <string name="log_viewer_title">Log</string>
     <string name="logcat_error">Impossibile eseguire logcat: </string>
-    <string name="module_version_error">Impossibile determinare la versione modulo del kernel</string>
+    <string name="module_disabler_disabled_summary">Il modulo sperimentale del kernel può migliorare le prestazioni</string>
+    <string name="module_disabler_disabled_title">Abilita il backend del modulo del kernel</string>
+    <string name="module_disabler_enabled_summary">Il backend in userspace più lento potrebbe migliorare la stabilità</string>
+    <string name="module_disabler_enabled_title">Disabilita il backend del modulo del kernel</string>
+    <string name="module_installer_error">Qualcosa non ha funzionato. Riprova</string>
+    <string name="module_installer_initial">Il modulo sperimentale del kernel può migliorare le prestazioni</string>
     <string name="module_installer_not_found">Nessun modulo disponibile per il tuo dispositivo</string>
-    <string name="module_installer_initial">Il modulo del kernel sperimentale può migliorare le prestazioni</string>
     <string name="module_installer_title">Scarica e installa il modulo del kernel</string>
     <string name="module_installer_working">Scaricamento e installazione…</string>
-    <string name="module_installer_error">Qualcosa è andato storto. Riprova</string>
+    <string name="module_version_error">Impossibile determinare la versione modulo del kernel</string>
     <string name="mtu">MTU</string>
+    <string name="multiple_tunnels_summary_off">L\'attivazione di un tunnel disattiverà gli altri</string>
+    <string name="multiple_tunnels_summary_on">Più tunnel possono essere attivati contemporaneamente</string>
+    <string name="multiple_tunnels_title">Consenti più tunnel contemporanei</string>
     <string name="name">Nome</string>
     <string name="no_config_error">Tentativo di attivare un tunnel senza configurazione</string>
     <string name="no_configs_error">Nessuna configurazione trovata</string>
     <string name="no_tunnels_error">Non esistono tunnel</string>
     <string name="parse_error_generic">stringa</string>
-    <string name="parse_error_inet_address">indirizzo IP</string>
+    <string name="parse_error_inet_address">Indirizzo IP</string>
     <string name="parse_error_inet_endpoint">endpoint</string>
-    <string name="parse_error_inet_network">rete IP</string>
+    <string name="parse_error_inet_network">IP rete</string>
     <string name="parse_error_integer">numero</string>
     <string name="parse_error_reason">Impossibile analizzare %1$s “%2$s”</string>
     <string name="peer">Peer</string>
+    <string name="permission_description">controllare i tunnel WireGuard, abilitando e disabilitando i tunnel a piacimento, potenzialmente dirottando il traffico Internet</string>
     <string name="permission_label">controlla tunnel WireGuard</string>
     <string name="persistent_keepalive">Tieni sempre attivo</string>
     <string name="pre_shared_key">Chiave condivisa (PSK)</string>
@@ -116,14 +137,18 @@
     <string name="public_key">Chiave pubblica</string>
     <string name="public_key_description">La chiave pubblica</string>
     <string name="qr_code_hint">Suggerimento: genera con `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
+    <string name="restore_on_boot_summary_off">Non attiverà i tunnel configurati all\'avvio</string>
+    <string name="restore_on_boot_summary_on">Attiverà i tunnel configurati all\'avvio</string>
     <string name="restore_on_boot_title">Ripristina all\'avvio</string>
     <string name="save">Salva</string>
     <string name="select_all">Seleziona tutto</string>
     <string name="set_exclusions">Imposta esclusioni</string>
     <string name="settings">Impostazioni</string>
-    <string name="shell_exit_status_read_error">La shell non riesce a leggere l\'exit status</string>
+    <string name="shell_exit_status_read_error">La shell non riesce a leggere lo stato di uscita</string>
     <string name="shell_marker_count_error">La shell si aspettava 4 marker, ne ha ricevuti %d</string>
-    <string name="shell_start_error">Avvio della shell fallito: %d</string>
+    <string name="shell_start_error">Avvio della shell non riuscito: %d</string>
+    <string name="success_application_will_restart">Successo. L\'applicazione si riavvierà…</string>
+    <string name="toggle_all">Inverti tutto</string>
     <string name="toggle_error">Errore di commutazione tunnel WireGuard: %s</string>
     <string name="tools_installer_already">wg e wg-quick sono già installati</string>
     <string name="tools_installer_failure">Impossibile installare strumenti di riga di comando (non root?)</string>
@@ -136,11 +161,11 @@
     <string name="tools_installer_working">Installazione di wg e wg-quick</string>
     <string name="tools_unavailable_error">Strumenti necessari non disponibili</string>
     <string name="transfer">Trasferisci</string>
-    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
     <string name="transfer_bytes">%d B</string>
+    <string name="transfer_gibibytes">%.2f GiB</string>
     <string name="transfer_kibibytes">%.2f KiB</string>
     <string name="transfer_mibibytes">%.2f MiB</string>
-    <string name="transfer_gibibytes">%.2f GiB</string>
+    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
     <string name="transfer_tibibytes">%.2f TiB</string>
     <string name="tun_create_error">Impossibile creare il dispositivo tun</string>
     <string name="tunnel_config_error">Impossibile configurare il tunnel (wg-quick ha risposto %d)</string>
@@ -166,6 +191,4 @@
     <string name="zip_export_success">Salvato in “%s”</string>
     <string name="zip_export_summary">Il file zip verrà salvato nella cartella di download</string>
     <string name="zip_export_title">Esporta i tunnel in un file zip</string>
-    <string name="key_length_error">Lunghezza chiave non valida</string>
-    <string name="key_contents_error">Caratteri errati nella chiave</string>
 </resources>
