--- a/ui/src/main/res/values-ru/strings.xml
+++ b/ui/src/main/res/values-ru/strings.xml
@@ -89,10 +89,12 @@
     <string name="error_up">Ошибка при запуске туннеля: %s</string>
     <string name="exclude_private_ips">Исключить частные IP-адреса</string>
     <string name="excluded_applications">Исключенные приложения</string>
+    <string name="generate_new_private_key">Сгенерировать новый приватный ключ</string>
     <string name="generic_error">Неизвестная “%s” ошибка</string>
     <string name="hint_automatic">(авто)</string>
     <string name="hint_generated">(авто)</string>
     <string name="hint_optional">(авто)</string>
+    <string name="hint_optional_discouraged">(опционально, не рекомендуется)</string>
     <string name="hint_random">(авто)</string>
     <string name="illegal_filename_error">Неверное имя файла “%s”</string>
     <string name="import_error">Не удалось импортировать туннель: %s</string>
