--- a/ui/src/main/res/values-de/strings.xml
+++ b/ui/src/main/res/values-de/strings.xml
@@ -191,4 +191,8 @@
     <string name="zip_export_success">Gespeichert unter “%s”</string>
     <string name="zip_export_summary">Zip-Datei wird im Download-Verzeichnis gespeichert</string>
     <string name="zip_export_title">Tunnel als Zip-Datei exportieren</string>
+    <string name="biometric_prompt_zip_exporter_title">Authentifizieren, um Tunnel zu exportieren</string>
+    <string name="biometric_prompt_private_key_title">Authentifizieren, um privaten Schlüssel anzuzeigen</string>
+    <string name="biometric_auth_error">Authentifizierungsfehler</string>
+    <string name="biometric_auth_error_reason">Authentifizierungsfehler: %s</string>
 </resources>
