--- a/ui/src/main/res/values-id/strings.xml
+++ b/ui/src/main/res/values-id/strings.xml
@@ -1,69 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="delete_error">
-        <item quantity="one">Tidak dapat menghapus %d tunel: %s</item>
-        <item quantity="other">Tidak dapat menghapus %d tunel: %s</item>
+        <item quantity="other">Tidak dapat menghapus %d terowongan: %s</item>
     </plurals>
     <plurals name="delete_success">
-        <item quantity="one">Berhasil menghapus tunel %d</item>
-        <item quantity="other">Berhasil menghapus tunel %d</item>
+        <item quantity="other">Berhasil menghapus terowongan %d</item>
     </plurals>
     <plurals name="delete_title">
-        <item quantity="one">%d tunnel dipilih</item>
-        <item quantity="other">%d tunel dipilih</item>
+        <item quantity="other">%d terowongan dipilih</item>
     </plurals>
     <plurals name="import_partial_success">
-        <item quantity="one">Mengimpor tunel %d dari %d</item>
-        <item quantity="other">Mengimpor tunel %d dari %d</item>
+        <item quantity="other">Mengimpor %1$d terowongan dari %2$d</item>
     </plurals>
     <plurals name="import_total_success">
-        <item quantity="one">Mengimpor tunel %d</item>
-        <item quantity="other">Mengimpor tunel %d</item>
+        <item quantity="other">Mengimpor %d terowongan</item>
     </plurals>
     <plurals name="set_excluded_applications">
-        <item quantity="one">%d Aplikasi dikecualikan</item>
-        <item quantity="other">%d Aplikasi dikecualikan</item>
+        <item quantity="other">%d Aplikasi Dikecualikan</item>
     </plurals>
-    <string name="add_peer">Tambahkan peer</string>
+    <string name="add_peer">Tambahkan rekan</string>
     <string name="addresses">Alamat</string>
+    <string name="allow_remote_control_intents_summary_off">Apl eksternal tidak dapat mengalihkan terowongan (disarankan)</string>
+    <string name="allow_remote_control_intents_summary_on">Apl eksternal dapat mengalihkan terowongan (lanjutan)</string>
+    <string name="allow_remote_control_intents_title">Izinkan apl kendali jarak jauh</string>
     <string name="allowed_ips">IP diizinkan</string>
     <string name="app_name">WireGuard</string>
-    <string name="bad_config_context">%1$s\'s %2$s</string>
+    <string name="bad_config_context">%1$s %2$s</string>
     <string name="bad_config_context_top_level">%s</string>
     <string name="bad_config_error">%1$s di %2$s</string>
     <string name="bad_config_explanation_pka">: Harus positif dan tidak lebih dari 65535</string>
-    <string name="bad_config_explanation_positive_number">: Angka harus positif</string>
-    <string name="bad_config_explanation_udp_port">: Harus nomor port UDP yang valid</string>
-    <string name="bad_config_reason_invalid_key">Kunci tidak valid</string>
-    <string name="bad_config_reason_invalid_number">Angka tidak valid</string>
-    <string name="bad_config_reason_invalid_value">Nilai tidak valid</string>
-    <string name="bad_config_reason_missing_attribute">Atribut yang hilang</string>
-    <string name="bad_config_reason_missing_section">Bagian yang hilang</string>
-    <string name="bad_config_reason_syntax_error">Kesalahan sintaks</string>
-    <string name="bad_config_reason_unknown_attribute">Atribut tidak diketahui</string>
-    <string name="bad_config_reason_unknown_section">Bagian tidak diketahui</string>
-    <string name="bad_config_reason_value_out_of_range">Nilai di luar jangkauan</string>
-    <string name="bad_extension_error">File harus .conf atau .zip</string>
-    <string name="cancel">Kembali</string>
-    <string name="config_delete_error">Tidak dapat menghapus file konfigurasi %s</string>
-    <string name="config_exists_error">Konfigurasi untuk “%s” sudah ada</string>
-    <string name="config_file_exists_error">Konfigurasi file “%s” sudah ada</string>
-    <string name="config_not_found_error">Konfigurasi file “%s” tidak ditemukan</string>
-    <string name="config_rename_error">Nama konfigurasi “%s” Tidak bisa diganti</string>
+    <string name="bad_config_explanation_positive_number">: Harus positif</string>
+    <string name="bad_config_explanation_udp_port">: Harus nomor porta UDP yang sah</string>
+    <string name="bad_config_reason_invalid_key">Kunci tidak sah</string>
+    <string name="bad_config_reason_invalid_number">Bilngan tidak sah</string>
+    <string name="bad_config_reason_invalid_value">Nilai tidak sah</string>
+    <string name="bad_config_reason_missing_attribute">Atribut hilang</string>
+    <string name="bad_config_reason_missing_section">Bagian hilang</string>
+    <string name="bad_config_reason_syntax_error">Galat sintaks</string>
+    <string name="bad_config_reason_unknown_attribute">Atribut tak diketahui</string>
+    <string name="bad_config_reason_unknown_section">Bagian tak diketahui</string>
+    <string name="bad_config_reason_value_out_of_range">Nilai di luar rentang</string>
+    <string name="bad_extension_error">Berkas harus .conf atau .zip</string>
+    <string name="cancel">Batalkan</string>
+    <string name="config_delete_error">Tidak dapat menghapus berkas konfigurasi %s</string>
+    <string name="config_exists_error">Sudah ada konfigurasi untuk “%s”</string>
+    <string name="config_file_exists_error">Sudah ada konfigurasi berkas “%s”</string>
+    <string name="config_not_found_error">Tidak menemukan konfigurasi berkas “%s”</string>
+    <string name="config_rename_error">Tidak bisa mengganti nama konfigurasi “%s”</string>
     <string name="config_save_error">Konfigurasi “%1$s”: %2$s tidak bisa disimpan</string>
     <string name="config_save_success">Konfigurasi “%s” berhasil disimpan</string>
     <string name="create_activity_title">Buat tunel WireGuard</string>
     <string name="create_bin_dir_error">Tidak dapat membuat direktori biner lokal</string>
-    <string name="create_empty">Buat dari awal</string>
-    <string name="create_output_dir_error">Tidak dapat membuat direktori keluaran</string>
     <string name="create_downloads_file_error">Tidak dapat membuat file di direktori download</string>
+    <string name="create_empty">Buat dari awal</string>
+    <string name="create_from_file">Impor dari berkas atau arsip</string>
+    <string name="create_from_qr_code">Pindai dari kode QR</string>
+    <string name="create_output_dir_error">Tidak dapat membuat direktori keluaran</string>
     <string name="create_temp_dir_error">Tidak dapat membuat direktori lokal sementara</string>
     <string name="create_tunnel">Buat tunel</string>
     <string name="dark_theme_summary_off">Saat ini menggunakan tema terang (siang)</string>
     <string name="dark_theme_summary_on">Saat ini menggunakan tema gelap (malam)</string>
     <string name="dark_theme_title">Gunakan tema gelap</string>
     <string name="delete">Hapus</string>
-    <string name="toggle_all">Matikan semua</string>
     <string name="dns_servers">Server DNS</string>
     <string name="edit">Edit</string>
     <string name="endpoint">Titik akhir</string>
@@ -73,40 +71,48 @@
     <string name="error_up">Kesalahan menambahkan tunel: %s</string>
     <string name="exclude_private_ips">Kecualikan IP pribadi</string>
     <string name="excluded_applications">Kecualikan aplikasi</string>
+    <string name="generate_new_private_key">Buat kunci privat baru</string>
     <string name="generic_error">Eror “%s” Tidak diketahui</string>
     <string name="hint_automatic">(otomatis)</string>
     <string name="hint_generated">(generate)</string>
     <string name="hint_optional">(pilihan)</string>
+    <string name="hint_optional_discouraged">(opsional, tidak disarankan)</string>
     <string name="hint_random">(acak)</string>
     <string name="illegal_filename_error">Nama file “%s” ilegal</string>
     <string name="import_error">Tunel %s tidak bisa diimpor</string>
     <string name="import_from_qr_code">Mengimpor tunel dari kode QR</string>
     <string name="import_success">“%s” Sudah diimpor</string>
     <string name="interface_title">Antarmuka</string>
+    <string name="key_contents_error">Karakter buruk pada kunci</string>
+    <string name="key_length_error">Panjang kunci salah</string>
     <string name="key_length_explanation_base64">: Kunci WireGuard base64 harus terdiri dari 44 karakter (32 bit)</string>
     <string name="key_length_explanation_binary">: Kunci WireGuard harus terdiri dari 32 bit</string>
     <string name="key_length_explanation_hex">: Kunci hex WireGuard Harus terdiri dari 64 karakter (32 bit)</string>
     <string name="listen_port">Isi port</string>
     <string name="log_export_error">Log tidak bisa diekspor: %s</string>
+    <string name="log_export_subject">Berkas Log WireGuard Android</string>
     <string name="log_export_success">Simpan ke “%s”</string>
     <string name="log_export_title">Ekspor file log</string>
+    <string name="log_saver_activity_label">Simpan log</string>
+    <string name="log_viewer_pref_summary">Log dapat membantu dengan pengawakutuan</string>
+    <string name="log_viewer_pref_title">Lihat log aplikasi</string>
+    <string name="log_viewer_title">Log</string>
     <string name="logcat_error">Tidak bisa menjalankan logcat: </string>
-    <string name="module_version_error">Tidak dapat menentukan versi modul kernel</string>
-    <string name="module_installer_not_found">Tidak tersedia modul untuk perangkat anda</string>
+    <string name="module_disabler_disabled_summary">Modul kernel eksperimental dapat meningkatkan kinerja</string>
+    <string name="module_disabler_disabled_title">Aktifkan backend modul kernel</string>
+    <string name="module_disabler_enabled_summary">Backend userspace yang lebih lambat dapat meningkatkan stabilitas</string>
+    <string name="module_disabler_enabled_title">Nonaktifkan backend modul kernel</string>
+    <string name="module_installer_error">Ada yang salah. Silakan coba lagi</string>
     <string name="module_installer_initial">Modul kernel eksperimental dapat meningkatkan kinerja</string>
+    <string name="module_installer_not_found">Tidak tersedia modul untuk perangkat anda</string>
     <string name="module_installer_title">Unduh dan pasang modul kernel</string>
     <string name="module_installer_working">Mengunduh and memasang…</string>
-    <string name="module_installer_error">Ada yang salah. Silakan coba lagi</string>
-    <string name="module_disabler_disabled_title">Aktifkan backend modul kernel</string>
-    <string name="module_disabler_disabled_summary">Modul kernel eksperimental dapat meningkatkan kinerja</string>
-    <string name="module_disabler_enabled_title">Nonaktifkan backend modul kernel</string>
-    <string name="module_disabler_enabled_summary">Backend userspace yang lebih lambat dapat meningkatkan stabilitas</string>
-    <string name="success_application_will_restart">Berhasil. Sekarang aplikasi akan memulai ulang…</string>
+    <string name="module_version_error">Tidak dapat menentukan versi modul kernel</string>
     <string name="mtu">MTU</string>
-    <string name="multiple_tunnels_title">Izinkan beberapa sekaligus tunel</string>
-    <string name="multiple_tunnels_summary_on">Beberapa tunel dapat dihidupkan secara bersamaan</string>
     <string name="multiple_tunnels_summary_off">Menyalakan satu tunel akan mematikan semuanya</string>
-    <string name="name">Name</string>
+    <string name="multiple_tunnels_summary_on">Beberapa tunel dapat dihidupkan secara bersamaan</string>
+    <string name="multiple_tunnels_title">Izinkan beberapa sekaligus tunel</string>
+    <string name="name">Nama</string>
     <string name="no_config_error">Lihat tunel tanpa konfigurasi</string>
     <string name="no_configs_error">Tidak ditemukan konfigurasi</string>
     <string name="no_tunnels_error">Tidak ada tunel</string>
@@ -116,7 +122,8 @@
     <string name="parse_error_inet_network">Jaringan IP</string>
     <string name="parse_error_integer">angka</string>
     <string name="parse_error_reason">%1$s “%2$s” Tidak dapat diuraikan</string>
-    <string name="peer">Peer</string>
+    <string name="peer">Rekan</string>
+    <string name="permission_description">mengontrol terowongan WireGuard, mengaktifkan dan menonaktifkannya sesuka hati, berpotensi salah melalu lintas Internet</string>
     <string name="permission_label">Kontrol tunel WireGuard</string>
     <string name="persistent_keepalive">Keepalive persisten</string>
     <string name="pre_shared_key">Kunci Pra-bersama</string>
@@ -124,8 +131,8 @@
     <string name="public_key">Kunci publik</string>
     <string name="public_key_description">Kunci publik</string>
     <string name="qr_code_hint">Tips: generate dengan `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
-    <string name="restore_on_boot_summary_on">Tunel yang diaktifkan akan dimunculkan saat boot</string>
     <string name="restore_on_boot_summary_off">Tunel yang diaktifkan tidak akan ditampilkan saat boot</string>
+    <string name="restore_on_boot_summary_on">Tunel yang diaktifkan akan dimunculkan saat boot</string>
     <string name="restore_on_boot_title">Pulihkan saat boot</string>
     <string name="save">Simpan</string>
     <string name="select_all">Pilih semua</string>
@@ -134,6 +141,8 @@
     <string name="shell_exit_status_read_error">Shell tidak dapat membaca status keluar</string>
     <string name="shell_marker_count_error">Shell diharapkan 4 nilai, diterima %d</string>
     <string name="shell_start_error">Gagal memulai shell: %d</string>
+    <string name="success_application_will_restart">Berhasil. Sekarang aplikasi akan memulai ulang…</string>
+    <string name="toggle_all">Matikan semua</string>
     <string name="toggle_error">Tunel WireGuard %s gagal dialihkan</string>
     <string name="tools_installer_already">wg and wg-quick sudah terpasang</string>
     <string name="tools_installer_failure">Tidak dapat memasang alat command-line (tidak root?)</string>
@@ -146,11 +155,11 @@
     <string name="tools_installer_working">Memasang wg and wg-quick</string>
     <string name="tools_unavailable_error">Alat yang diperlukan tidak tersedia</string>
     <string name="transfer">Transfer</string>
-    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
     <string name="transfer_bytes">%d B</string>
+    <string name="transfer_gibibytes">%.2f GiB</string>
     <string name="transfer_kibibytes">%.2f KiB</string>
     <string name="transfer_mibibytes">%.2f MiB</string>
-    <string name="transfer_gibibytes">%.2f GiB</string>
+    <string name="transfer_rx_tx">trm: %1$s, krm: %2$s</string>
     <string name="transfer_tibibytes">%.2f TiB</string>
     <string name="tun_create_error">Tidak dapat membuat perangkat tun</string>
     <string name="tunnel_config_error">Tidak bisa mengkonfigurasikan tunel (wg-quick %d dikembalikan)</string>
@@ -176,6 +185,8 @@
     <string name="zip_export_success">Disimpan ke “%s”</string>
     <string name="zip_export_summary">File Zip akan disimpan di folder download</string>
     <string name="zip_export_title">Ekspor tunel ke file zip</string>
-    <string name="key_length_error">Panjang kunci salah</string>
-    <string name="key_contents_error">Karakter buruk pada kunci</string>
+    <string name="biometric_prompt_zip_exporter_title">Otentikasi untuk mengekspor terowongan</string>
+    <string name="biometric_prompt_private_key_title">Otentikasi untuk melihat kunci privat</string>
+    <string name="biometric_auth_error">Otentikasi gagal</string>
+    <string name="biometric_auth_error_reason">Otentikasi gagal: %s</string>
 </resources>
