--- a/ui/src/main/res/values-ja/strings.xml
+++ b/ui/src/main/res/values-ja/strings.xml
@@ -185,4 +185,8 @@
     <string name="zip_export_success">“%s” に保存</string>
     <string name="zip_export_summary">Zip ファイルはダウンロードフォルダに保存されます</string>
     <string name="zip_export_title">トンネル設定を zip ファイルにエクスポート</string>
+    <string name="biometric_prompt_zip_exporter_title">トンネル設定をエクスポートするために認証を行います</string>
+    <string name="biometric_prompt_private_key_title">秘密鍵を表示するために認証を行います</string>
+    <string name="biometric_auth_error">認証に失敗</string>
+    <string name="biometric_auth_error_reason">認証に失敗: %s</string>
 </resources>
