--- a/ui/src/main/res/values-zh-rCN/strings.xml
+++ b/ui/src/main/res/values-zh-rCN/strings.xml
@@ -184,5 +184,9 @@
     <string name="zip_export_error">无法导出隧道配置：%s</string>
     <string name="zip_export_success">已保存至 “%s”</string>
     <string name="zip_export_summary">zip 压缩包将保存至下载文件夹</string>
-    <string name="zip_export_title">导出隧道配置为 zip 压缩包</string>
+    <string name="zip_export_title">导出隧道配置</string>
+    <string name="biometric_prompt_zip_exporter_title">导出隧道需要认证指纹</string>
+    <string name="biometric_prompt_private_key_title">查看私钥需要认证指纹</string>
+    <string name="biometric_auth_error">认证失败</string>
+    <string name="biometric_auth_error_reason">认证失败：%s</string>
 </resources>
